--- a/Lab1/README
+++ b/Lab1/README
@@ -1,4 +1,4 @@
 Lab 1: Introduction & C Programming Review
 
-Refresher on the fundamentals of C programming, which provided the foundation for the operating systems labs. 
-I practiced compiling and running C programs in a UNIX/Linux environment, reviewed pointers, arrays, and memory management, and reinforced my understanding of functions and control structures.
+Reviewed C programming by writing simple programs in a UNIX/Linux environment.
+Implemented examples using pointers, arrays, functions, and control structures to confirm correct compilation and execution.
